[package]
name = "Modal-and-Nodal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.32.0"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
